<resources>
    <string name="app_name">Kotlin Homework 3</string>
    <string name="title_shopping_list">Shopping</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_race">Race</string>
    <string name="title_body_metrics">Body</string>
    <integer-array name="image_list">
        <item>@drawable/apple</item>
        <item>@drawable/avocado</item>
        <item>@drawable/banana</item>
        <item>@drawable/cherries</item>
        <item>@drawable/coconut</item>
        <item>@drawable/grapes</item>
        <item>@drawable/lemon</item>
        <item>@drawable/orange</item>
        <item>@drawable/peach</item>
        <item>@drawable/pineapple</item>
        <item>@drawable/strawberry</item>
        <item>@drawable/tomato</item>
    </integer-array>
    <string name="contacts_add">新增聯絡人</string>
    <string name="contacts_name">姓名:</string>
    <string name="contacts_name_hint">請輸入姓名</string>
    <string name="contacts_phone">電話:</string>
    <string name="contacts_phone_hint">請輸入電話</string>
    <string name="contacts_confirm">確認新增</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="race_title">龜兔賽跑</string>
    <string name="race_rabbit">兔子</string>
    <string name="race_turtle">烏龜</string>
    <string name="race_start">開始</string>
    <string name="body_metrics_title">體位檢測機</string>
    <string name="body_metrics_height">身高 :</string>
    <string name="body_metrics_height_hint">請輸入身高</string>
    <string name="body_metrics_weight">體重 :</string>
    <string name="body_metrics_weight_hint">請輸入體重</string>
    <string name="body_metrics_age">年齡 :</string>
    <string name="body_metrics_age_hint">請輸入年齡</string>
    <string name="body_metrics_male">男生</string>
    <string name="body_metrics_female">女生</string>
    <string name="body_metrics_calculate">計算</string>
    <string name="body_metrics_standard_weight">標準體重\n無</string>
    <string name="body_metrics_body_fat">體脂肪\n無</string>
    <string name="body_metrics_bmi">BMI\n無</string>
    <string name="body_metrics_progress">0%</string>
</resources>
