<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BodyMetricsFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/body_metrics_title"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body_metrics_height"
        app:layout_constraintBottom_toBottomOf="@+id/edHeight"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="@+id/edHeight" />

    <EditText
        android:id="@+id/edHeight"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/body_metrics_height_hint"
        android:inputType="numberSigned"
        app:layout_constraintStart_toEndOf="@+id/tvHeight"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body_metrics_weight"
        app:layout_constraintBottom_toBottomOf="@+id/edWeight"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="@+id/edWeight" />

    <EditText
        android:id="@+id/edWeight"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/body_metrics_weight_hint"
        android:inputType="numberSigned"
        app:layout_constraintStart_toEndOf="@+id/tvWeight"
        app:layout_constraintTop_toBottomOf="@+id/edHeight" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body_metrics_age"
        app:layout_constraintBottom_toBottomOf="@+id/edAge"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toTopOf="@+id/edAge" />

    <EditText
        android:id="@+id/edAge"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/body_metrics_age_hint"
        android:inputType="numberSigned"
        app:layout_constraintStart_toEndOf="@+id/tvAge"
        app:layout_constraintTop_toBottomOf="@+id/edWeight" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/tvAge"
        app:layout_constraintTop_toBottomOf="@+id/edAge">

        <RadioButton
            android:id="@+id/btnBoy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/body_metrics_male" />

        <RadioButton
            android:id="@+id/btnGirl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/body_metrics_female" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/body_metrics_calculate"
        app:layout_constraintStart_toStartOf="@+id/tvHeight"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tvWeightResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:text="@string/body_metrics_standard_weight"
        app:layout_constraintBottom_toBottomOf="@+id/btnCalculate"
        app:layout_constraintStart_toEndOf="@+id/btnCalculate"
        app:layout_constraintTop_toTopOf="@+id/btnCalculate" />

    <TextView
        android:id="@+id/tvFatResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:text="@string/body_metrics_body_fat"
        app:layout_constraintBottom_toBottomOf="@+id/tvWeightResult"
        app:layout_constraintStart_toEndOf="@+id/tvWeightResult"
        app:layout_constraintTop_toTopOf="@+id/tvWeightResult" />

    <TextView
        android:id="@+id/tvBmiResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:gravity="center"
        android:text="@string/body_metrics_bmi"
        app:layout_constraintBottom_toBottomOf="@+id/tvFatResult"
        app:layout_constraintStart_toEndOf="@+id/tvFatResult"
        app:layout_constraintTop_toTopOf="@+id/tvFatResult" />

    <LinearLayout
        android:id="@+id/llProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#cc000000"
        android:clickable="true"
        android:elevation="3dp"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:progress="0" />

        <TextView
            android:id="@+id/tvProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/body_metrics_progress"
            android:textColor="@android:color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
